--- a/sim/ppc/ChangeLog
+++ b/sim/ppc/ChangeLog
@@ -1,403 +1,7 @@
-2012-12-19  Joel Brobecker  <brobecker@adacore.com>
-
-	* COPYING: Update to GPL version 3.
-
-2012-06-15  Joel Brobecker  <brobecker@adacore.com>
-
-	* configure: Regenerate.
-
-2012-05-24  Pedro Alves  <palves@redhat.com>
-
-	PR gdb/7205
-
-        Replace TARGET_SIGNAL_ with GDB_SIGNAL_ throughout.
-
-2012-03-14  Michael Haubenwallner  <michael.haubenwallner@salomon.at>
-
-	* emul_unix.c (st_pad1, st_pad2, st_pad3): Undefine.
-
-2012-01-02  Joel Brobecker  <brobecker@adacore.com>
-
-	* dp-bit.c: Reformat copyright header.
-
-2011-02-11  Ben Golding  <ben_golding@yahoo.co.uk>
-
-	* events.c: add #include <stdlib.h> for free(). Fix PR build/13372.
-
-2011-10-17  Mike Frysinger  <vapier@gentoo.org>
-
-	* configure.ac: Change include to common/acinclude.m4.
-
-2011-10-17  Mike Frysinger  <vapier@gentoo.org>
-
-	* configure.ac: Change AC_PREREQ to 2.64.  Delete AC_CONFIG_HEADER
-	call.  Replace common.m4 include with SIM_AC_COMMON.
-	* configure: Regenerate.
-
-2011-06-09  Joel Brobecker  <brobecker@adacore.com>
-
-	* psim.c (psim_options): Fix length of comparison when checking
-	for --sysroot= option.
-
-2011-06-08  Joel Brobecker  <brobecker@adacore.com>
-
-	* psim.c (psim_options): Add option that cause the error
-	in invalid-option error messages. Print the usage when
-	detecting an invalid long-name option.
-
-2011-06-08  Joel Brobecker  <brobecker@adacore.com>
-
-	* psim.c (psim_options): Accept and ignore `--sysroot=...'.
-
-2011-06-03  Joel Brobecker  <brobecker@adacore.com>  (obvious fix)
-
-	From Stephen Kitt  <steve@sk2.org>
-	* vm.c (vm_synchronize_context): Spelling fix in function
-	documentation.
-
-2011-04-16  Mike Frysinger  <vapier@gentoo.org>
-
-	* sim_calls.c (sim_complete_command): New stub function.
-
-2011-02-14  Mike Frysinger  <vapier@gentoo.org>
-
-	* cap.c (cap_remove): Change zfree to free.
-	* corefile.c (core_init): Likewise.
-	* device.c (detach_device_interrupt_edge): Likewise.
-	(clean_device_interrupt_edges): Likewise.
-	(device_instance_delete): Likewise.
-	(device_set_property): Likewise.
-	(clean_device_properties): Likewise.
-	(device_add_range_array_property): Likewise.
-	(device_add_reg_array_property): Likewise.
-	* emul_bugapi.c (emul_bugapi_do_read): Likewise.
-	(emul_bugapi_do_write)
-	* emul_netbsd.c (write_direntries): Likewise.
-	(do_read): Likewise.
-	(do_write): Likewise.
-	(do_getdirentries): Likewise.
-	* emul_unix.c (do_unix_read): Likewise.
-	(do_unix_write): Likewise.
-	* events.c (event_queue_init): Likewise.
-	(event_queue_deschedule): Likewise.
-	(event_queue_process): Likewise.
-	* hw_disk.c (open_disk_image): Likewise.
-	(hw_disk_instance_delete): Likewise.
-	* hw_eeprom.c (hw_eeprom_instance_delete): Likewise.
-	* hw_htab.c (htab_dma_binary): Likewise.
-	* hw_init.c (update_for_binary_section): Likewise.
-	* hw_memory.c (hw_memory_set_available): Likewise.
-	(hw_memory_init_address): Likewise.
-	(hw_memory_instance_release): Likewise.
-	* pk_disklabel.c (disklabel_delete): Likewise.
-	* table.c (table_push): Likewise.
-	* tree.c (parse_reg_property): Likewise.
-	(parse_ranges_property): Likewise.
-	(parse_string_property): Likewise.
-	* main.c (zfree): Delete.
-	* sim_calls.c (zfree): Likewise.
-	* sim_callbacks.h (zfree): Likewise.
-
-2011-01-11  Andrew Burgess  <aburgess@broadcom.com>
-
-	* gdb-sim.c (sim_store_register): Update return value to
-	match new API.
-
-2011-01-05  Joel Brobecker  <brobecker@adacore.com>
-
-	* psim.texinfo: Copyright year update.
-
-2010-04-14  Mike Frysinger  <vapier@gentoo.org>
-
-	* sim_calls.c (sim_write): Add const to buf arg.
-
-2010-02-14  Andreas Schwab  <schwab@linux-m68k.org>
-
-	* ppc-instructions: Fix missing assignment in last change.
-
-2010-02-05  Andreas Schwab  <schwab@linux-m68k.org>
-
-	* ppc-instructions: Fix aliasing bugs when calling
-	invalid_arithemetic_operation.
-
-2009-11-13  Nathan Froyd  <froydnj@codesourcery.com>
-
-	* configure.ac: If build != host, create a separate build-config.h
-	file desecribing the build machine.
-	* configure: Regenerate.
-	* lf.c: Include build-config.h instead of config.h.
-	* dgen.c: Likewise.
-	* igen.c: Likewise.
-	* misc.c: Likewise.
-	* misc.h: Likewise.
-	* filter.c: Likewise.
-	* table.c: Likewise.
-
-2009-10-15  Joel Sherrill <joel.sherrill@oarcorp.com>
-
-	* std-config.h: Fix spelling error.
-
-2009-09-22  Joel Sherrill  <joel.sherrill@oarcorp.com>
-
-	* main.c: Fix spelling error.
-
-2009-09-15  Andreas Tobler <andreast-list@fgznet.ch>
-	    Doug Evans  <dje@google.com>
-
-	* configure.ac (sim_hwflags): Use AC_DEFINE to define HAVE_UNION_SEMUN.
-	* configure: Regenerate.
-	* config.in: Regenerate.
-	* hw_sem.c: (HAVE_UNION_SEMUN): Renamed from HAS_UNION_SEMUN.
-
-2009-08-22  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
-
-	* config.in: Regenerate.
-	* configure: Likewise.
-
-	* configure: Regenerate.
-
-2009-07-30  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
-
-	* Makefile.in (datarootdir): New variable.
-
-2009-01-12  Nathan Froyd  <froydnj@codesourcery.com>
-
-	* ppc-instructions (sync): Add L field.
-
-2008-12-15 Joel Sherrill <joel.sherrill@oarcorp.com>
-
-	* ppc-instructions, ppc-spr-table: Add ability
-	to read tbrl and tbru special registers.
-
-2008-11-18  Joel Sherrill <joel.sherrill@oarcorp.com>
-
-	* configure: Regenerated.
-	* configure.ac: Add test for System V shared memory and semaphore.
-	* debug.c, debug.h: Add trace support for new devices.
-	* hw_sem.c, hw_shm.c: New files.
-	* Makefile.in: Add hw_sem.c and hw_shm.c.
-
-2008-07-11  Hans-Peter Nilsson  <hp@axis.com>
-
-	* configure.ac: Add test for libz and zlib.h.
-	* Makefile.in (LIBS): Set from @LIBS@.
-	* configure: Regenerate.
-	* config.in: Ditto.
-
-2008-06-06  Vladimir Prus  <vladimir@codesourcery.com>
-            Daniel Jacobowitz  <dan@codesourcery.com>
-            Joseph Myers  <joseph@codesourcery.com>
-
-	* configure.ac: Use ACX_PKGVERSION and ACX_BUGURL.
-	* configure, config.in: Regenerated.
-	* Makefile.in (LIB_OBJ): Add version.o.
-	(version.c, version.o): New rules.
-	* psim.c (psim_usage): Add help parameter.  Print the bug URL.
-	Exit with code 0 for help.
-	(psim_options): Update calls to psim_usage.  Handle --help and
-	--version.
-	* psim.h (psim_usage): Update prototype.
-	* main.c (main): Update psim_usage call.
-
-2008-03-14  Nick Hudson  <nick.hudson@dsl.pipex.com
-
-        * configure.ac: Pass ../../intl to ZW_GNU_GETTEXT_SISTER_DIR.
-        * configure: Regenerate.
-
-2007-10-15  Daniel Jacobowitz  <dan@codesourcery.com>
-
-	* gdb-sim.c (regnum2spr): Rename to...
-	(sim_spr_register_name): ... this.  Make global.
-
-2007-09-04  Jerome Guitton  <guitton@adacore.com>
-
-	* sim/ppc/emul_bugapi.c (emul_bugapi_create): quote the file
-	name property before parsing it.
-
-2006-12-21  Hans-Peter Nilsson  <hp@axis.com>
-
-	* acconfig.h: Remove.
-	* config.in: Regenerate.
-
-2006-11-22  Tom Marn <tom.marn@telargo.com>
-
-	Committed by Andrew Cagney.
-	* ppc-instructions: Implement optional PowerPC stfiwx instruction.
-	
-2006-07-12  Fred Fish  <fnf@specifix.com>
-
-	* sim-endian.h (asm/byteorder.h): Don't include private kernel
-	header.
-
-2006-06-13  Richard Earnshaw  <rearnsha@arm.com>
-
-	* configure: Regenerated.
-
-2006-05-31  Daniel Jacobowitz  <dan@codesourcery.com>
-
-	* Makefile.in: Replace INTLLIBS and INTLDEPS with LIBINTL
-	and LIBINTL_DEP everywhere.
-	(INTL_DIR, INTL_SRC): Remove.
-	(INTL_CFLAGS): Use INCINTL.
-	* configure.ac: Use ZW_GNU_GETTEXT_SISTER_DIR.
-	* configure: Regenerated.
-
-2006-05-05  Andreas Schwab  <schwab@suse.de>
-
-	* configure.ac (CFLAGS_FOR_BUILD): Set and substitute.
-	* configure: Regenerate.
-
-	* Makefile.in (CFLAGS_FOR_BUILD): Define.
-	(BUILD_CFLAGS): Use it instead of hardcoding "-g -O".
-	(gentmap): Fix typo BUILD_FLAGS -> BUILD_CFLAGS.
-
-2006-04-23  Andreas Schwab  <schwab@suse.de>
-
-	* Makefile.in (tmp-ld-decode): Fix dependencies.
-	(tmp-ld-cache): Likewise.
-	(tmp-ld-insn): Likewise.
-
-2006-02-01  Mark Mitchell  <mark@codesourcery.com>
-
-	* emul_netbsd.c (emul_netbsd_create): Quote file-name property.
-	* emul_unix.c (emul_unix_create): Likewise.
-	* tree.c (libiberty.h): Include it.
-	(tree_quote_property): New function.
-	* tree.h (tree_quote_property): Declare.
-
-2006-01-25  Mark Mitchell  <mark@codesourcery.com>
-
-	* words.h (natural32): Define as "int".
-
-2006-01-23  Mark Mitchell  <mark@codesourcery.com>
-
-	* words.h (signed32): Define as "int".
-	(unsigned32): Define as "unsigned int".
-
-2005-11-28 Mark Mitchell  <mark@codesourcery.com>
-
-	* configure.ac (USE_WIN32API): Define it.
-	* configure.in: Regenerate.
-	* config.in: Likewise.
-	* emul_netbsd.c (write_timezone): Guard with HAVE_GETTIMEOFDAY.
-	* emul_unix.c (do_unix_mkdir): Handle Win32 1-argument mkdir.
-
-2005-11-28  Mark Mitchell  <mark@codesourcery.com>
-
-	* psim.c: Include gdb/signals.h.
-	
-	* sim_calls.c (gdb/signals.h): Include it.
-	(sim_stop_reason): Use TARGET_SIGNAL_*.
-	* psim.c (cntrl_c_simulation): Use TARGET_SIGNAL_*.
-
-2005-07-15  Ben Elliston  <bje@au.ibm.com>
-
-	* hw_htab.c (bfd_get_section_lma): Remove macro; use BFD's.
-
-2005-07-15  Ben Elliston  <bje@au.ibm.com>
-
-	* hw_init.c: Comment out tokens after #endif directive.
-	* hw_register.c: Likewise.
-	* hw_trace.c: Likewise.
-	* hw_vm.c: Likewise.
-
-2005-04-20  Manoj Iyer  <manjo@austin.ibm.com>
-
-	* psim.c: Added libiberty.h header file.
-
-2005-04-18  Manoj Iyer  <manjo@austin.ibm.com>
-
-	* configure.ac: Added check for long long.
-	* config.in: Regenerated.
-	* configure: Regenerated.
-	* words.h: Modified logic to check for HAVE_LONG_LONG instead of
-	__GNUC__, added config.h header file.
-
-2005-03-25  Anthony Green  <green@redhat.com>
-
-	* tree.c (parse_reg_property): Fix memset usage.
-
-2005-03-23  Mark Kettenis  <kettenis@gnu.org>
-
-	* configure: Regenerate.
-
-2005-01-11  Andrew Cagney  <cagney@localhost.localdomain>
-
-	* configure.ac: Delete AC_CONFIG_AUX_DIR.
-	* configure: Re-generate.
-
-2005-01-07  Andrew Cagney  <cagney@gnu.org>
-
-	* configure.ac: Rename configure.in, require autoconf 2.59.
-	* configure: Re-generate.
-
-2005-01-03  Andreas Schwab  <schwab@suse.de>
-
-	* Makefile.in (hw_com.o, hw_eeprom.o): Depend on
-	$(DEVICE_TABLE_H).
-
-2004-11-16  Andreas Schwab  <schwab@suse.de>
-
-	* Makefile.in (defines.h): Depend on tmp-defines.
-	(hw.c hw.h): Depend on tmp-hw.
-	(pk.h): Depend on tmp-pk.
-
-2004-11-11  Andreas Schwab  <schwab@suse.de>
-
-	* sim_calls.c: Include "libiberty.h".
-
-2004-09-24  Ian Lance Taylor <ian@wasabisystems.com>
-
-	Committed by Andrew Cagney.
-	* configure.in: Check for sys/mount.h, sys/vfs.h, sys/statfs.h.
-	Check for struct statfs.
-	* emul_netbsd.c: If not HAVE_STRUCT_STATFS, #undef HAVE_FSTATFS.
-	* configure, config.in: Regenerate.
-
-2004-08-05  Nathanael Nerode  <neroden@gcc.gnu.org>
-
-	* Makefile.in (GDB_INCLUDES): Remove bogus reference to mmalloc.
-
-2004-08-04  Andrew Cagney  <cagney@gnu.org>
-	    Jim Blandy <jimb@redhat.com>
-
-	* sim_callbacks.h (simulator): Declare.
-	* Makefile.in (gdb-sim.o): New rule.
-	(MAIN_SRC, GDB_OBJ): Add gdb-sim.o, gdb-sim.c.
-	(DEFS_H): Delete.
-	(GDB_SIM_PPC_H): Define.
-	* gdb-sim.c: New file.
-	* sim_calls.c: Do not include "defs.h".
-	(simulator): Drop static.
-	(sim_store_register, sim_fetch_register): Delete.
-
-2004-08-04  Andrew Cagney  <cagney@gnu.org>
-
-	* Back out accidently committed change.
-
-2004-08-04  Jim Blandy  <jimb@redhat.com>
-
-	Use a fixed register numbering when communicating with the PowerPC
-	simulator.
-	* sim_calls.c: #include "registers.h" and "gdb/sim-ppc.h"; do not
-	include GDB's "defs.h".
-	(gdb_register_name_table): New variable.
-	(gdb_register_name_table_size): New enum constant.
-	(gdb_register_name): New function.
-	(sim_fetch_register, sim_store_register): Use gdb_register_name,
-	instead of calling gdbarch_register_name.
-	* Makefile.in (GDB_SIM_PPC_H): New variable.
-	(DEFS_H): Delete variable.
-	(sim_calls.o): Update dependencies.
-
 2004-07-26  Andrew Cagney  <cagney@gnu.org>
 
 	Problem from Olaf Hering <olh@suse.de>.
 	* Makefile.in (install, installdirs): Add DESTDIR.
-
-2004-07-10  Ben Elliston  <bje@au.ibm.com>
-
-	* tree.c (parse_integer_property): Comment typo fix.
 
 2004-07-06  Jim Blandy  <jimb@redhat.com>
 
@@ -3058,7 +2662,7 @@ Wed Jun 19 21:45:28 1996  Andrew Cagney  <cagney@kremvax.highland.com.au>
 	* configure.in: Adjust filter flag so that default includes 32bit
 	and floating point.
 	* ppc-instructions: Clean up filter fields so that only in use
-        entries are specified (ie delete `be').
+        entries are specifed (ie delete `be').
 
 	* misc.c (name2i, i2name): New function.  Map between a string and
         an integer value.
